force-app/main/default/objects/Housing__c/Housing__c.object-meta.xml
<CustomObject>
    <description>**DO NOT USE** - Replaced with Locations Object</description>
    <label>Housing</label>
    <nameField>
        <displayFormat>HOUSE{00000}</displayFormat>
        <label>Housing Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Housing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>