force-app/main/default/objects/Housing__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <inlineHelpText>Building where the animal is housed</inlineHelpText>
    <label>Building</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buildings</valueSetName>
    </valueSet>
</CustomField>