force-app/main/default/objects/Housing__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <inlineHelpText>Date and Time when the animal was removed from this location</inlineHelpText>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>