force-app/main/default/objects/Housing__c/fields/Pen_Cage_Reference__c.field-meta.xml
<CustomField>
    <fullName>Pen_Cage_Reference__c</fullName>
    <inlineHelpText>The reference number/name where the animal is housed within the building.</inlineHelpText>
    <label>Pen/Cage Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>