force-app/main/default/objects/Housing__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Date and time when the animal was housed at this location</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>